[gd_scene load_steps=8 format=3 uid="uid://q0chcul4t876"]

[ext_resource type="Script" uid="uid://pvwd78epm3kl" path="res://dialogue/dialogue.gd" id="1_oi3j2"]
[ext_resource type="PackedScene" path="res://robot.tscn" id="2_iqg0b"]
[ext_resource type="Texture2D" uid="uid://dfoo8kko7mbwl" path="res://dialogue/asset/Dialog2.png" id="2_oi3j2"]
[ext_resource type="Texture2D" uid="uid://bnaq08meww6dl" path="res://dialogue/asset/Next_button.png" id="3_hoxo3"]
[ext_resource type="Texture2D" uid="uid://hajtr8kppa4x" path="res://dialogue/asset/Next_button_press.png" id="4_iq77p"]
[ext_resource type="Texture2D" uid="uid://ecy5sqd0c1w5" path="res://dialogue/asset/Next_button_hover.png" id="5_iqg0b"]
[ext_resource type="LabelSettings" uid="uid://5ccgk8ruls1n" path="res://dialogue/Font/Button_FONT.tres" id="7_iqg0b"]

[node name="Dialogue" type="CanvasLayer"]
script = ExtResource("1_oi3j2")
d_file = "res://dialogue/dialogue.JSON"

[node name="Robot" parent="." instance=ExtResource("2_iqg0b")]
position = Vector2(196, 331)
scale = Vector2(2.43, 2.36667)

[node name="NinePatchRect" type="NinePatchRect" parent="."]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -281.0
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource("2_oi3j2")
region_rect = Rect2(-0.975906, 0.944221, 365.964, 203.179)
patch_margin_left = 26
patch_margin_top = 21
patch_margin_right = 24
patch_margin_bottom = 21

[node name="Name" type="RichTextLabel" parent="NinePatchRect"]
layout_mode = 0
offset_left = 21.0
offset_top = 5.0
offset_right = 125.0
offset_bottom = 46.0
scale = Vector2(2.44623, 1.88134)
theme_override_colors/default_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(1, 0.278431, 0.360784, 1)
theme_override_constants/outline_size = 6
horizontal_alignment = 1

[node name="Chat" type="RichTextLabel" parent="NinePatchRect"]
layout_mode = 0
offset_left = 52.0
offset_top = 59.0
offset_right = 1229.0
offset_bottom = 206.0
theme_override_colors/default_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0.996078, 0.262745, 0.403922, 1)
theme_override_constants/outline_size = 5
theme_override_font_sizes/normal_font_size = 25
text = "tesdf

"

[node name="NextButton" type="TextureButton" parent="."]
offset_left = 1052.0
offset_top = 638.0
offset_right = 1180.0
offset_bottom = 676.0
scale = Vector2(1.58791, 1.73533)
texture_normal = ExtResource("3_hoxo3")
texture_pressed = ExtResource("4_iq77p")
texture_hover = ExtResource("5_iqg0b")

[node name="Next" type="Label" parent="NextButton"]
layout_mode = 0
offset_left = 46.0
offset_top = 11.0
offset_right = 115.0
offset_bottom = 34.0
text = "NEXT"
label_settings = ExtResource("7_iqg0b")
horizontal_alignment = 1
vertical_alignment = 1

[node name="BackButton" type="TextureButton" parent="."]
offset_left = 228.0
offset_top = 638.0
offset_right = 356.0
offset_bottom = 676.0
scale = Vector2(-1.588, 1.735)
texture_normal = ExtResource("3_hoxo3")
texture_pressed = ExtResource("4_iq77p")
texture_hover = ExtResource("5_iqg0b")

[node name="Back" type="Label" parent="BackButton"]
layout_mode = 0
offset_left = 113.98
offset_top = 10.951
offset_right = 182.98
offset_bottom = 33.951
scale = Vector2(-1, 1)
text = "BACK"
label_settings = ExtResource("7_iqg0b")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Typing__lanel" type="Label" parent="."]
offset_left = 268.0
offset_top = 430.0
offset_right = 441.0
offset_bottom = 469.0
text = "sdf"

[connection signal="pressed" from="NextButton" to="." method="_on_next_button_pressed"]
[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
